--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: monitorapp
-        image: amruthavm0407/nodejss:v1
+        image: amruthavm0407/nodejss:latest
         ports:
         - containerPort: 3000
